--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -2,10 +2,329 @@
     x:Class="DevKit.Views.AndroidDebugBridgeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="300"
-    d:DesignWidth="300"
+    xmlns:vm="clr-namespace:DevKit.ViewModels"
+    d:DataContext="{d:DesignInstance Type=vm:AndroidDebugBridgeViewModel}"
+    d:DesignHeight="560"
+    d:DesignWidth="600"
+    x:Name="TargetControl"
+    Background="white"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="选择设备" />
+
+                <ComboBox
+                    x:Name="DeviceComboBox"
+                    Grid.Column="1"
+                    Margin="10,0"
+                    ItemsSource="{Binding DeviceItems}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="SelectionChanged">
+                            <b:InvokeCommandAction Command="{Binding DeviceSelectedCommand}" CommandParameter="{Binding ElementName=DeviceComboBox, Path=SelectedItem}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </ComboBox>
+
+                <Button
+                    Grid.Column="2"
+                    Command="{Binding RefreshDeviceCommand}"
+                    Content="刷新"
+                    Style="{StaticResource ButtonPrimary}" />
+            </Grid>
+
+            <Border
+                Grid.Row="1"
+                Margin="10,0,10,10"
+                BorderBrush="LightGray"
+                BorderThickness="0.5">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="Android ID" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding AndroidId}" />
+                    </Grid>
+
+                    <Grid Grid.Row="1" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="设备型号" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding DeviceModel}" />
+                    </Grid>
+
+                    <Grid Grid.Row="2" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="设备品牌" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding DeviceBrand}" />
+                    </Grid>
+
+                    <Grid Grid.Row="3" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="ABI架构" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding DeviceAbi}"
+                            TextWrapping="Wrap" />
+                    </Grid>
+
+                    <Grid Grid.Row="4" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="Android版本" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding AndroidVersion}" />
+                    </Grid>
+
+                    <Grid Grid.Row="5" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="屏幕分辨率" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding DeviceSize}" />
+                    </Grid>
+
+                    <Grid Grid.Row="6" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="屏幕密度" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding DeviceDensity}" />
+                    </Grid>
+
+                    <Grid Grid.Row="7" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Column="0" Text="内存信息" />
+
+                        <StackPanel Grid.Column="1" Orientation="Vertical">
+                            <TextBlock VerticalAlignment="Center" Text="{Binding MemoryRatio}" />
+
+                            <hc:WaveProgressBar
+                                Width="110"
+                                Height="110"
+                                Margin="0,10,0,0"
+                                HorizontalAlignment="Left"
+                                ShowText="False"
+                                Style="{StaticResource ProgressBarSuccessWave}"
+                                Value="{Binding MemoryProgress}" />
+                        </StackPanel>
+                    </Grid>
+
+                    <Grid Grid.Row="8" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock Grid.Column="0" Text="电池状态" />
+
+                        <StackPanel Grid.Column="1" Orientation="Vertical">
+                            <TextBlock VerticalAlignment="Center" Text="{Binding BatteryState}" />
+
+                            <ProgressBar
+                                Margin="0,7,0,0"
+                                Style="{StaticResource ProgressBarSuccess}"
+                                Value="{Binding BatteryProgress}" />
+                        </StackPanel>
+                    </Grid>
+
+                    <Grid Grid.Row="9" Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1.25*" />
+                            <ColumnDefinition Width="1.75*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="电池温度" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Text="{Binding BatteryTemperature}" />
+                    </Grid>
+                </Grid>
+            </Border>
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Margin="10">
+                <TextBlock VerticalAlignment="Center" Text="非系统软件包" />
+
+                <Button
+                    HorizontalAlignment="Right"
+                    Command="{Binding RefreshApplicationCommand}"
+                    Content="刷新"
+                    Style="{StaticResource ButtonPrimary}" />
+            </Grid>
+
+            <ListBox
+                x:Name="PackageListBox"
+                Grid.Row="1"
+                Margin="0,0,10,0"
+                ItemsSource="{Binding ApplicationPackages}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="SelectionChanged">
+                        <b:InvokeCommandAction Command="{Binding PackageSelectedCommand}" CommandParameter="{Binding ElementName=PackageListBox, Path=SelectedItem}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </ListBox>
+
+            <UniformGrid
+                Grid.Row="2"
+                Margin="0,10,10,10"
+                Columns="2"
+                Rows="2">
+
+                <Button
+                    Margin="0,0,5,5"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding RebootDeviceCommand}"
+                    Content="重启设备"
+                    Style="{StaticResource ButtonWarning}" />
+
+                <Button
+                    Margin="5,0,0,5"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding ScreenshotCommand}"
+                    Content="截屏"
+                    Style="{StaticResource ButtonSuccess}" />
+
+                <Button
+                    Margin="0,5,5,0"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding UninstallCommand}"
+                    Content="卸载"
+                    Style="{StaticResource ButtonDanger}" />
+
+                <Button
+                    Margin="5,5,0,0"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding InstallCommand}"
+                    CommandParameter="{Binding ElementName=TargetControl}"
+                    Content="安装"
+                    Style="{StaticResource ButtonPrimary}" />
+            </UniformGrid>
+        </Grid>
+    </Grid>
 </UserControl>
