--- a/DevKit/Views/AndroidDebugBridgeView.xaml
+++ b/DevKit/Views/AndroidDebugBridgeView.xaml
@@ -68,8 +68,8 @@
             <Border
                 Grid.Row="1"
                 Margin="10,0,10,10"
-                BorderBrush="LightGray"
-                BorderThickness="0.5">
+                BorderBrush="{DynamicResource BorderBrush}"
+                BorderThickness="1">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -282,6 +282,8 @@
                 x:Name="PackageListBox"
                 Grid.Row="1"
                 Margin="0,0,10,0"
+                BorderBrush="{DynamicResource BorderBrush}"
+                BorderThickness="1"
                 ItemsSource="{Binding ApplicationPackages}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
