--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -18,68 +18,71 @@
     Topmost="True"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
 
-        <ListBox
-            x:Name="MenuListBox"
-            Grid.Column="0"
-            HorizontalAlignment="Stretch"
-            BorderThickness="0"
-            ItemsSource="{Binding MenuModels}"
-            SelectedIndex="0">
+    <Border BorderBrush="{DynamicResource DarkDefaultBrush}" BorderThickness="0,1,0,0">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="SelectionChanged">
-                    <b:InvokeCommandAction Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding ElementName=MenuListBox}" />
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
+            <ListBox
+                x:Name="MenuListBox"
+                Grid.Column="0"
+                HorizontalAlignment="Stretch"
+                BorderThickness="0"
+                ItemsSource="{Binding MenuModels}"
+                SelectedIndex="0">
 
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock
-                        Padding="15"
-                        VerticalAlignment="Center"
-                        FontSize="16"
-                        Text="{Binding}" />
-                </DataTemplate>
-            </ListBox.ItemTemplate>
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="SelectionChanged">
+                        <b:InvokeCommandAction Command="{Binding ItemSelectedCommand}" CommandParameter="{Binding ElementName=MenuListBox}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
 
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <Border
-                                    x:Name="ItemContainerBorder"
-                                    Margin="7"
-                                    CornerRadius="7">
-                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
-                                </Border>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock
+                            Padding="15"
+                            VerticalAlignment="Center"
+                            FontSize="16"
+                            Text="{Binding}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
 
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
-                                    </Trigger>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Border
+                                        x:Name="ItemContainerBorder"
+                                        Margin="7"
+                                        CornerRadius="7">
+                                        <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                    </Border>
 
-                                    <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource PrimaryBrush}" />
-                                        <Setter Property="TextBlock.Foreground" Value="white" />
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListBox.ItemContainerStyle>
-        </ListBox>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
+                                        </Trigger>
 
-        <ContentControl
-            Grid.Column="1"
-            Margin="1,0,0,0"
-            prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource PrimaryBrush}" />
+                                            <Setter Property="TextBlock.Foreground" Value="white" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+
+            <ContentControl
+                Grid.Column="1"
+                Margin="1,0,0,0"
+                prism:RegionManager.RegionName="ContentRegion" />
+        </Grid>
+    </Border>
 </Window>
