--- a/DevKit/Views/TcpCommunicateView.xaml
+++ b/DevKit/Views/TcpCommunicateView.xaml
@@ -74,7 +74,53 @@
             <ListBox
                 Grid.Row="1"
                 Margin="0,10"
-                ItemsSource="{Binding MessageCollection}" />
+                ItemsSource="{Binding MessageCollection}"
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontSize="12" Text="{Binding Time}" />
+                                <TextBlock
+                                    Margin="10,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding IsSend}" />
+                            </StackPanel>
+
+                            <TextBlock
+                                Grid.Row="1"
+                                FontSize="12"
+                                Text="{Binding Content}"
+                                TextWrapping="Wrap" />
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <Border x:Name="ItemContainerBorder" Padding="3">
+                                        <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                    </Border>
+
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True" />
+
+                                        <Trigger Property="IsSelected" Value="True" />
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
 
             <Grid Grid.Row="2" Margin="0,0,0,10">
                 <Grid.RowDefinitions>
