优化TCP客户端收发功能

--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -31,6 +31,7 @@
                 HorizontalAlignment="Stretch"
                 BorderThickness="0"
                 ItemsSource="{Binding MenuModels}"
+                ScrollViewer.VerticalScrollBarVisibility="Disabled"
                 SelectedIndex="0">
 
                 <b:Interaction.Triggers>
