--- a/DevKit/Views/TcpCommunicateView.xaml
+++ b/DevKit/Views/TcpCommunicateView.xaml
@@ -170,10 +170,19 @@
                     </Grid.ColumnDefinitions>
 
                     <CheckBox
-                        x:Name="ShowHexCheckBox"
                         Grid.Column="0"
                         Content="Hex显示"
-                        IsChecked="{Binding ShowHex}" />
+                        IsChecked="{Binding ShowHex}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="Checked">
+                                <b:InvokeCommandAction Command="{Binding ShowHexCheckedCommand}" />
+                            </b:EventTrigger>
+
+                            <b:EventTrigger EventName="Unchecked">
+                                <b:InvokeCommandAction Command="{Binding ShowHexUncheckedCommand}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </CheckBox>
 
                     <Button
                         Grid.Column="1"
@@ -207,10 +216,19 @@
                     </Grid.ColumnDefinitions>
 
                     <CheckBox
-                        x:Name="SendHexCheckBox"
                         Grid.Column="0"
                         Content="Hex发送"
-                        IsChecked="{Binding SendHex}" />
+                        IsChecked="{Binding SendHex}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="Checked">
+                                <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
+                            </b:EventTrigger>
+
+                            <b:EventTrigger EventName="Unchecked">
+                                <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </CheckBox>
 
                     <CheckBox
                         x:Name="LoopCheckBox"
