完成预设指令列表数据绑定

--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -31,7 +31,8 @@
                 HorizontalAlignment="Stretch"
                 BorderThickness="0"
                 ItemsSource="{Binding MenuModels}"
-                ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                ScrollViewer.CanContentScroll="False"
+                ScrollViewer.VerticalScrollBarVisibility="Hidden"
                 SelectedIndex="0">
 
                 <b:Interaction.Triggers>
