--- a/DevKit/Dialogs/ExtensionCommandDialog.xaml
+++ b/DevKit/Dialogs/ExtensionCommandDialog.xaml
@@ -39,6 +39,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <TextBlock
@@ -48,18 +49,23 @@
 
             <hc:TextBox
                 Grid.Column="1"
-                Margin="10,0,0,0"
+                Margin="10,0"
                 Padding="4,2"
+                hc:InfoElement.Placeholder="此项必填"
                 hc:InfoElement.ShowClearButton="True"
                 Text="{Binding UserCommandValue}"
                 TextWrapping="NoWrap" />
+
+            <CheckBox
+                Grid.Column="2"
+                Content="Hex"
+                IsChecked="{Binding IsHex}" />
         </Grid>
 
         <Grid Grid.Row="1" Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
@@ -72,30 +78,108 @@
                 Grid.Column="1"
                 Margin="10,0"
                 Padding="4,2"
+                hc:InfoElement.Placeholder="此项非必填"
                 hc:InfoElement.ShowClearButton="True"
                 Text="{Binding CommandAnnotation}"
                 TextWrapping="NoWrap" />
 
-            <CheckBox
-                Grid.Column="2"
-                Content="Hex"
-                IsChecked="{Binding IsHex}" />
-
             <Button
-                Grid.Column="3"
-                Margin="10,0,0,0"
+                Grid.Column="2"
                 Command="{Binding SaveExtensionCommand}"
                 Content="&#xe60a;"
-                FontFamily="/DevKit;component/Fonts/#iconfont"
-                Style="{StaticResource ButtonSuccess}" />
+                FontFamily="/DevKit;component/Fonts/#iconfont" />
         </Grid>
 
         <ListBox
             Grid.Row="2"
+            HorizontalContentAlignment="Stretch"
             BorderThickness="0"
             ItemsSource="{Binding CommandCollection}"
             ScrollViewer.CanContentScroll="False"
-            ScrollViewer.VerticalScrollBarVisibility="Disabled"
-            Style="{x:Null}" />
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden"
+            Style="{x:Null}">
+
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
+                        <Grid.ContextMenu>
+                            <ContextMenu Style="{x:Null}">
+                                <MenuItem
+                                    Click="DeleteMenuItem_Click"
+                                    Header="删除"
+                                    Style="{x:Null}" />
+
+                                <MenuItem
+                                    Click="ModifyMenuItem_Click"
+                                    Header="修改"
+                                    Style="{x:Null}" />
+                            </ContextMenu>
+                        </Grid.ContextMenu>
+
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+
+                            <Border
+                                Grid.Column="0"
+                                VerticalAlignment="Center"
+                                Background="{DynamicResource PrimaryBrush}"
+                                CornerRadius="3">
+                                <TextBlock
+                                    Margin="3,1"
+                                    FontSize="12"
+                                    Foreground="White"
+                                    Text="{Binding Annotation}" />
+                            </Border>
+
+                            <Button
+                                Grid.Column="2"
+                                Margin="0,2,0,0"
+                                BorderThickness="0"
+                                Content="&#xe726;"
+                                FontFamily="/DevKit;component/Fonts/#iconfont"
+                                Foreground="LimeGreen"
+                                Style="{StaticResource ButtonDefault.Small}" />
+                        </Grid>
+
+                        <TextBlock
+                            Grid.Row="1"
+                            Margin="0,3,0,0"
+                            FontSize="14"
+                            Text="{Binding Command}"
+                            TextWrapping="Wrap" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                <Border x:Name="ItemContainerBorder" Padding="3">
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                                </Border>
+
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource BackgroundBrush}" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
     </Grid>
 </UserControl>
